-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.6.0-beta1
I create two run configurations for same CMake exe target:
Projects->Run->Run configuration->Add
Then I rename each one using "Rename" button.
Restart QtCreator : All names got lost, instead I got default ones.
| For Gerrit Dashboard: QTCREATORBUG-19762 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 219577,1 | CMake: Do not override the displayname/defaultdisplayname | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
| 219579,2 | CMake: Do not override the displayname/defaultdisplayname | 4.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |