CMake: Do not override the displayname/defaultdisplayname

Do not override the displayname/default displayname when restoring
CMakeRunConfigurations.

Task-number: QTCREATORBUG-19762
Change-Id: Idf5e90e017a363444387e9c22812ad501aabc75b
Reviewed-by: hjk <hjk@qt.io>