src/plugins/cmakeprojectmanager/cmakerunconfiguration.cpp
@@ -146,9 +146,6 @@ bool CMakeRunConfiguration::fromMap(const QVariantMap &map)
         extraAspect<WorkingDirectoryAspect>()->setDefaultWorkingDirectory(ct.workingDirectory);
     }
 
-    setDisplayName(defaultDisplayName());
-    setDefaultDisplayName(defaultDisplayName());
-
     return true;
 }
 
